--- a/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
+++ b/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
@@ -26,7 +26,7 @@
     {
         try
         {
-            Account account = await accountService.GetAccount(id);
+            Account account = await accountService.GetAccountAsync(id);
             MainCurrency = account.mainCurrency;
             Loan = account.loan;
             double Total = 0;
