made currency better

--- a/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
+++ b/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
@@ -16,7 +16,7 @@
     private string MainCurrency = "";
     private bool Loan;
     private string name;
-    private List<Currency> currencies;
+    private List<ICurrency> currencies;
     
     private string msg = "";
 
