Fixed errors in logic
Fixed some errors

--- a/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
+++ b/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
@@ -16,7 +16,7 @@
     private string MainCurrency = "";
     private bool Loan;
     private string name;
-    private List<ICurrency> currencies;
+    private CurrencyList currencies;
     
     private string msg = "";
 
