--- a/dotNetProject/BlazorWASM/Pages/Index.razor
+++ b/dotNetProject/BlazorWASM/Pages/Index.razor
@@ -1,9 +1,12 @@
-﻿@page "/"
+﻿@inject NavigationManager navMgr
+
+@page "/"
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to our page!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?"/>
+<div>
+    <span>If you want to log in, please click on this button:</span>
+    <td @onclick="@(() => navMgr.NavigateTo($"/Login"))"> Login </td>
+</div>
