--- a/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
+++ b/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
@@ -6,8 +6,11 @@
 <div>
     <p>Id of the account: @id</p>
     <br/>
+    <p>Name of the account: @name</p>
+    <br/>
     <p>Currency of the account: @MainCurrency</p>
-<br/>
+    <br/>
+    <p>Loan of the account: @Loan</p>
 </div>
 
 @code {
