--- a/dotNetProject/BlazorWASM/Pages/Register.razor
+++ b/dotNetProject/BlazorWASM/Pages/Register.razor
@@ -6,17 +6,87 @@
 
 <h3>Register</h3>
 
-@code {
-    private string username;
-    private string password;
-    private string firstname;
-    private string lastname;
-    private string country;
-    private string identityDocument;
-    private string birthday;
-    private string planType;
+<div class="card">
+ <div class="form-group field">
+        <label>Username:</label>
+        <input type="text" @bind="username" @bind:event="oninput"/>
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="form-group field">
+        <label>Password:</label>
+        <input type="text" @bind="password" @bind:event="oninput" />
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="form-group field">
+        <label>First name:</label>
+        <input type="text" @bind="firstname" @bind:event="oninput" />
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="form-group field">
+        <label>Last name:</label>
+        <input type="text" @bind="lastname" @bind:event="oninput" />
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="form-group field">
+        <label>Country:</label>
+        <input type="text" @bind="country" @bind:event="oninput" />
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="form-group field">
+        <label>Identity Document:</label>
+        <input type="text" @bind="identityDocument" @bind:event="oninput" />
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="form-group field">
+        <label>Birthday:</label>
+        <input type="text" @bind="birthday" @bind:event="oninput" />
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="form-group field">
+        <label>Plan Type:</label>
+        <input type="text" @bind="planType" @bind:event="oninput" />
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="button-row">
+        <button @onclick="RegisterAsync" disabled="@(string.IsNullOrEmpty(username))" class="acceptbtn">Register</button>
+    </div>
+</div>
 
-    private string error;
+@code {
+    private string username = "";
+    private string password = "";
+    private string firstname = "";
+    private string lastname = "";
+    private string country = "";
+    private string identityDocument = "";
+    private string birthday = "";
+    private string planType = "";
+
+    private string error = "";
     private async Task RegisterAsync()
     {
         error = "";
