Authorization of admin pages -> may need refractoring

--- a/dotNetProject/BlazorWASM/Pages/RegisterClient.razor
+++ b/dotNetProject/BlazorWASM/Pages/RegisterClient.razor
@@ -3,6 +3,7 @@
 @using Domain.DTOs
 @inject IClientService clientService
 @inject NavigationManager nav
+@attribute [Authorize("Domain")]
 
 <h3>RegisterClient</h3>
 
