--- a/dotNetProject/BlazorWASM/Pages/ClientAdminPage.razor
+++ b/dotNetProject/BlazorWASM/Pages/ClientAdminPage.razor
@@ -7,6 +7,7 @@
 @inject IClientService ClientSquared
 @inject NavigationManager navMgr;
 @inject IMoneyTransferService MoneyTransferService;
+@attribute [Authorize("Domain")]
 
 
 <h3>Client @_client.id</h3>
