--- a/dotNetProject/BlazorWASM/Shared/MainLayout.razor
+++ b/dotNetProject/BlazorWASM/Shared/MainLayout.razor
@@ -12,6 +12,7 @@
 
     <main>
         <div class="top-row px-4">
+            <CascadingAuthenticationState>
             <AuthorizeView>
                 <Authorized>
                     <button @onclick="Logout">Logout</button>
@@ -20,6 +21,8 @@
                     <button @onclick="Login">Login</button>
                 </NotAuthorized>
             </AuthorizeView>
+            </CascadingAuthenticationState>
+
         </div>
 
         <article class="content px-4">
