--- a/dotNetProject/BlazorWASM/Pages/Plan.razor
+++ b/dotNetProject/BlazorWASM/Pages/Plan.razor
@@ -54,13 +54,13 @@
 
     private string[] planDescriptions = new[]
     {
-        $"You get free banking! {System.Environment.NewLine} You get no comission on regular transactions and free exchange of currencies. With no limit! {System.Environment.NewLine} Finally, you get 0,005 interest rate and 0,25 loan rate!",
-        $"You get all the benefits from the previous plan! {System.Environment.NewLine} Plus, you get 0,01 interest rate and 0,10 loan rate!",
-        $"You get all the benefits from the previous plan! {System.Environment.NewLine} Plus, you get 0,02 interest rate and 0,08 loan rate!",
-        $"You get all the benefits from the previous plan! {System.Environment.NewLine} Plus, you get 0,05 interest rate and 0,1 loan rate!"
+        $"You get free banking! {System.Environment.NewLine} You get no comission on regular transactions and free exchange of currencies. With no limit! {System.Environment.NewLine} Finally, you get 0.5% interest rate and 25% loan rate!",
+        $"You get all the benefits from the previous plan! {System.Environment.NewLine} Plus, you get 1% interest rate and 10% loan rate!",
+        $"You get all the benefits from the previous plan! {System.Environment.NewLine} Plus, you get 2% interest rate and 8% loan rate!",
+        $"You get all the benefits from the previous plan! {System.Environment.NewLine} Plus, you get 5% interest rate and 1% loan rate!"
     };
 
-    private double[] prices = new[] { 0.0, 2.99, 4.99, 7.49 };
+    private double[] prices = new[] { 0.0, 29.99, 49.99, 79.49 };
 
     private Client? client { get; set; }
     private string? loggedUsername { get; set; }
