Main layout changed

--- a/dotNetProject/BlazorWASM/Pages/Index.razor
+++ b/dotNetProject/BlazorWASM/Pages/Index.razor
@@ -2,6 +2,14 @@
 
 @page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Welcome</PageTitle>
 
-<h1>Welcome to our page!</h1>
+<p class="center"> Just some news and info about banking idk</p>
+
+<style>
+    .center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+   }
+</style>
