--- a/dotNetProject/BlazorWASM/Shared/MainLayout.razor.css
+++ b/dotNetProject/BlazorWASM/Shared/MainLayout.razor.css
@@ -6,15 +6,16 @@
 
 main {
     flex: 1;
+    background-color: lightblue;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, lightblue 0%, cornflowerblue 70%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
+    background-color: lightblue;
+    border-bottom: none;
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
