--- a/dotNetProject/BlazorWASM/Shared/NavMenu.razor
+++ b/dotNetProject/BlazorWASM/Shared/NavMenu.razor
@@ -15,6 +15,27 @@
             </NavLink>
         </div>
     </nav>
+    <nav class="flex-column">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Accounts" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Accounts
+            </NavLink>
+        </div>
+    </nav>
+    <nav class="flex-column">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="TransferMoney" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Transfer
+            </NavLink>
+        </div>
+    </nav>
+    <nav class="flex-column">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Plan" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Buy Plan
+                </NavLink>
+            </div>
+        </nav>
 </div>
 
 @code {
