--- a/dotNetProject/BlazorWASM/Shared/MainLayout.razor
+++ b/dotNetProject/BlazorWASM/Shared/MainLayout.razor
@@ -15,10 +15,10 @@
             <CascadingAuthenticationState>
             <AuthorizeView>
                 <Authorized>
-                    <button style="border-radius: 12px; background-color: lightskyblue" @onclick="Logout">Logout</button>
+                    <button style="border-radius: 12px; background-color: lightskyblue; border-color: white;" @onclick="Logout">Logout</button>
                 </Authorized>
                 <NotAuthorized>
-                    <button style="border-radius: 12px; background-color: lightskyblue" @onclick="Login">Login</button>
+                    <button style="border-radius: 12px; background-color: lightskyblue; border-color: white;" @onclick="Login">Login</button>
                 </NotAuthorized>
             </AuthorizeView>
             </CascadingAuthenticationState>
