--- a/dotNetProject/BlazorWASM/Pages/TransferMoney.razor
+++ b/dotNetProject/BlazorWASM/Pages/TransferMoney.razor
@@ -7,8 +7,8 @@
 <div class="card">
     <div class="form-group field">
         <label>Account Receiver Number:</label>
-        <input type="text" @bind="_accountNrReceiver" @bind:event="oninput" />
-        @if (!string.IsNullOrEmpty(error))
+        <input type="text" @bind="_accountNrReceiver" oninput="changed()" id="accountNr"/>
+        @if (string.IsNullOrEmpty(error))
         {
             <label>@error</label>
         }
@@ -20,38 +20,40 @@
             <option>Pound</option>
             <option>Euro</option>
         </select>
-        @if (!string.IsNullOrEmpty(error))
-        {
-            <label>@error</label>
-        }
     </div>
     <div class="form-group field">
         <label>Value:</label>
-        <input type="text" @bind="_value" @bind:event="oninput" />
-        @if (!string.IsNullOrEmpty(error))
+        <input type="text" @bind="_value" oninput="changed()" id="valueNr" />
+        @if (string.IsNullOrEmpty(error))
         {
             <label>@error</label>
         }
     </div>
     <div class="button-row">
-        <button @onclick="TransferMoni" disabled="@(disableState)" class="acceptbtn">Send</button>
+        <button disabled  @onclick="TransferMoni" class="acceptbtn" id="bttn">Send</button>
     </div>
 </div>
 
+<script>
+function changed(){
+    var accountInput = document.getElementById("accountNr");
+    var s = accountInput.value;
+    var valueInput = document.getElementById("valueNr");
+    var t = valueInput.value;
+    if (s.length !== 0 && t.length !==0){
+        document.getElementById("bttn").removeAttribute("disabled");
+    }
+  }
+</script>
+
 @code {
     private string accountNrSeder;
-    
-    private string _accountNrReceiver = "";
-    
+
+    private string _accountNrReceiver;
+    private string _value;
     private string _currency;
     
     private string error = "";
-    private bool disableState = true;
-
-    protected void checkFields()
-    {
-        disableState =  _accountNrReceiver?.Length == 0 && _value?.Length == 0;
-    }
 
     protected async Task TransferMoni()
     {
