--- a/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
+++ b/dotNetProject/BlazorWASM/Pages/ViewAccount.razor
@@ -1,4 +1,4 @@
-﻿@page "/ViewAccount/{id:int}"
+﻿@page "/ViewAccount/{id:long}"
 @using Domain.Model
 @using HttpClients.ClientInterfaces
 @inject IAccountService accountService
