--- a/dotNetProject/BlazorWASM/Pages/AdministratorLogin.razor
+++ b/dotNetProject/BlazorWASM/Pages/AdministratorLogin.razor
@@ -2,7 +2,28 @@
 @using HttpClients.ClientInterfaces
 @inject IAuthService authService
 @inject NavigationManager nav
+
 <h3>AdministratorLogin</h3>
+
+<div class="card">
+    <div class="form-group field">
+        <label>User name:</label>
+        <input type="text" @bind="username" @bind:event="oninput"/>
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <label>@error</label>
+        }
+    </div>
+    <div class="form-group field">
+        <label>Password:</label>
+        <input type="password" @bind="password" @bind:event="oninput" />
+    </div>
+    <br/>
+    <div class="button-row">
+        <button @onclick="LoginAsync" disabled="@(string.IsNullOrEmpty(username))" class="acceptbtn">Login</button>
+    </div>
+</div>
+
 
 @code {
     private string username;
