--- a/dotNetProject/BlazorWASM/Pages/AdministratorLogin.razor
+++ b/dotNetProject/BlazorWASM/Pages/AdministratorLogin.razor
@@ -35,7 +35,7 @@
         try
         {
             await authService.LoginAdminAsync(username, password);
-            nav.NavigateTo("/");
+            nav.NavigateTo("/AdminMainPage");
         }
         catch (Exception e)
         {
