--- a/dotNetProject/BlazorWASM/Pages/Accounts.razor
+++ b/dotNetProject/BlazorWASM/Pages/Accounts.razor
@@ -18,7 +18,7 @@
         {
             <tr>
                 <td>@item.id</td>
-                <td @onclick="@(() => nav.NavigateTo($"/ViewAccount/{id:int}"))">@item.name </td>
+                <td @onclick="@(() => nav.NavigateTo($"/ViewAccount/{@item.id:int}"))">@item.name </td>
             </tr>
         }
     </tbody>
@@ -27,14 +27,16 @@
 
     [CascadingParameter]
     private Task<AuthenticationState> AuthState { get; set; } = null!;
-    private IEnumerable<Account> accounts;
+    private IEnumerable<Account> accounts = new List<Account>();
     private string msg = "";
     private int id;
 
     protected override async Task OnInitializedAsync()
     {
         var user = (await AuthState).User;
+        Console.WriteLine(user.Identity.Name);
         id = Int32.Parse(user.Claims.First(claim => claim.Type.Equals("Id")).Value);
+        Console.WriteLine(id);
         msg = "";
         try
         {
