--- a/dotNetProject/BlazorWASM/Pages/Plan.razor
+++ b/dotNetProject/BlazorWASM/Pages/Plan.razor
@@ -8,7 +8,7 @@
 
 @if (client != null)
 {
-    <text>Currently selected plan is </text>
+    <text>Currently selected plan is @client.planType</text>
     <table class="table">
         <thead>
         <tr>
